consertando autenticacao